Fix spacing of Yoast free banner when SEO settings active

--- a/projects/plugins/jetpack/_inc/client/traffic/style.scss
+++ b/projects/plugins/jetpack/_inc/client/traffic/style.scss
@@ -137,6 +137,8 @@
 }
 
 .jp-seo-social-previews {
+	margin-bottom: 0 !important;
+
 	.search-preview,
 	.facebook-preview,
 	.twitter-preview {
